--- a/idea.html
+++ b/idea.html
@@ -12,19 +12,8 @@
         <a href="index.html">Return</a>
     </div>
     <p>
-        A Christian journey through porn
+        Here is some counter-programming.
     </p>
-    <p>
-        Maybe it's like a nicotine patch for people who want to move away from harder porn.
-    </p>
-    <p>
-        Maybe I just want to express myself about my take on Lust vs. Christianity.
-    </p>
-    <p>
-        Maybe I want to sell this website for a profit and donate some of the proceeds to a good cause.  Boobs for Jesus idk.
-    </p>
-    <p>
-        Maybe it can help provide motivation and helpful captions to do pushups or excercise.
-    </p>
+    <iframe src='https://hypnotube.com/embed/2507' frameborder='0' height='400' width='600'></iframe><br><strong>Alpha Code - Reprogramming // Release v.1</strong> - powered by <a href='https://hypnotube.com'>Hypnotube</a>
 </body>
 </html>
