--- a/idea.html
+++ b/idea.html
@@ -14,6 +14,14 @@
     <p>
         Here is some counter-programming.
     </p>
-    <iframe src='https://hypnotube.com/embed/2507' frameborder='0' height='400' width='600'></iframe><br><strong>Alpha Code - Reprogramming // Release v.1</strong> - powered by <a href='https://hypnotube.com'>Hypnotube</a>
+    <p>
+        You are a man.
+    </p>
+    <p>
+        Women want you.
+    </p>
+    <p>
+        It's natural to make them happy.
+    </p>
 </body>
 </html>
