--- a/idea.html
+++ b/idea.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journey</title>
+    <title>Journey v2</title>
     <link rel="stylesheet" href="static/css/idea.css">
     <link rel="shortcut icon" type="image/png" href="static/img/mj3.png">
 </head>
